# openmp

libomptarget/: CMakeLists.txt
libomptarget/cmake/Modules/: LibomptargetGetDependencies.cmake
libomptarget/include/: omptarget.h  omptargetplugin.h
libomptarget/plugins/: CMakeLists.txt
libomptarget/plugins/chameleon/: CMakeLists.txt
libomptarget/plugins/chameleon/src/: rtl.cpp
libomptarget/plugins/cuda/src/: rtl.cpp
libomptarget/plugins/generic-elf-64bit/src/: rtl.cpp
libomptarget/src/: api.cpp  device.cpp  device.h  interface.cpp  omptarget.cpp  rtl.cpp  rtl.h
runtime/: CMakeLists.txt
